Had to fix mobile spacing for hero

--- a/src/components/hero/hero.module.scss
+++ b/src/components/hero/hero.module.scss
@@ -88,4 +88,12 @@
       object-fit: contain;
     }
   }
+
+  p:first-child {
+    padding-bottom: 20px;
+  }
+
+  p {
+    padding-bottom: 0;
+  }
 }
